Unified build fixes from ARMv7 build failures https://bugs.webkit.org/show_bug.cgi?id=216698

Reviewed by Adrian Perez de Castro.

* llint/LLIntThunks.cpp:
* runtime/FileBasedFuzzerAgent.cpp:
* runtime/FunctionExecutableDump.cpp:
* runtime/NativeExecutable.cpp:
* runtime/WeakMapImpl.cpp:


Canonical link: https://commits.webkit.org/229502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267239 268f45cc-cd09-0410-ab3c-d52691b4dbfc