Source/JavaScriptCore/llint/LLIntThunks.cpp
@@ -31,6 +31,7 @@
 #include "LLIntCLoop.h"
 #include "LLIntData.h"
 #include "LinkBuffer.h"
+#include "VMEntryRecord.h"
 #include "WasmCallingConvention.h"
 #include "WasmContextInlines.h"
 #include <wtf/NeverDestroyed.h>
